# StrawPen

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
.github/workflows/: cmake-ubuntu-latest.yml  cmake-wIndows-latest.yml  cmake-windows-latest.yml
assets/config/: imgui.ini
assets/linux/: strawpen_editor.desktop
src/: directory_explorer.cpp  directory_explorer.hpp  editor.cpp  editor.hpp  icon.rc  imgui_stdlib.cpp  imgui_stdlib.h  load_record.hpp  main.cpp  mediator_system.hpp  output.hpp  process.cpp  process.hpp  source_editor.cpp  source_editor.hpp  source_file.hpp  theme.hpp  version_info.h.in
